--- a/喜马拉雅/classes/discover(发现)/view/categoryList/RCCategoryListViewCell.xib
+++ b/喜马拉雅/classes/discover(发现)/view/categoryList/RCCategoryListViewCell.xib
@@ -7,10 +7,10 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="categaoryListCell" id="gTV-IL-0wX" customClass="RCCategoryListViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="103" height="114"/>
+            <rect key="frame" x="0.0" y="0.0" width="103" height="119"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="103" height="114"/>
+                <rect key="frame" x="0.0" y="0.0" width="103" height="119"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="lI8-nx-AUV">
                         <rect key="frame" x="6" y="8" width="90" height="80"/>
@@ -19,12 +19,12 @@
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="标题" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lEA-cv-Lqh">
-                        <rect key="frame" x="8" y="93" width="87" height="21"/>
+                        <rect key="frame" x="8" y="93" width="87" height="19"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="21" id="yGE-8T-Ydp"/>
+                            <constraint firstAttribute="height" constant="19" id="VcL-ge-WH1"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
@@ -32,19 +32,19 @@
             </view>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstItem="lEA-cv-Lqh" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="8" id="01q-fz-fzp"/>
                 <constraint firstItem="lI8-nx-AUV" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="8" id="7C8-m2-gZg"/>
                 <constraint firstAttribute="trailing" secondItem="lI8-nx-AUV" secondAttribute="trailing" constant="7" id="8Jn-up-1dw"/>
-                <constraint firstItem="lEA-cv-Lqh" firstAttribute="top" secondItem="lI8-nx-AUV" secondAttribute="bottom" constant="5" id="SAq-9j-1Mc"/>
+                <constraint firstAttribute="trailing" secondItem="lEA-cv-Lqh" secondAttribute="trailing" constant="8" id="UxF-63-laj"/>
+                <constraint firstItem="lEA-cv-Lqh" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="8" id="nHA-8x-NO1"/>
                 <constraint firstItem="lI8-nx-AUV" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="6" id="nfW-6V-7Kz"/>
-                <constraint firstAttribute="trailing" secondItem="lEA-cv-Lqh" secondAttribute="trailing" constant="8" id="vcX-ov-kXX"/>
+                <constraint firstItem="lEA-cv-Lqh" firstAttribute="top" secondItem="lI8-nx-AUV" secondAttribute="bottom" constant="5" id="peH-iA-laS"/>
             </constraints>
-            <size key="customSize" width="103" height="114"/>
+            <size key="customSize" width="103" height="119"/>
             <connections>
                 <outlet property="iconVIew" destination="lI8-nx-AUV" id="iu7-6H-uyL"/>
                 <outlet property="titleLabel" destination="lEA-cv-Lqh" id="YpN-1L-pJL"/>
             </connections>
-            <point key="canvasLocation" x="414.5" y="305"/>
+            <point key="canvasLocation" x="414.5" y="307.5"/>
         </collectionViewCell>
     </objects>
 </document>
