加载热门声音界面的数据，设置sectionHeaderView视图

--- a/喜马拉雅/classes/discover(发现)/view/Hot Anchor(最火主播)/RCAnthorViewCell.xib
+++ b/喜马拉雅/classes/discover(发现)/view/Hot Anchor(最火主播)/RCAnthorViewCell.xib
@@ -7,8 +7,8 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="225" id="KGk-i7-Jjw" customClass="RCAnthorViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="477" height="225"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="240" id="KGk-i7-Jjw" customClass="RCAnthorViewCell">
+            <rect key="frame" x="0.0" y="0.0" width="477" height="240"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
@@ -34,16 +34,16 @@
                         </state>
                     </button>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FcT-bY-1AN">
-                        <rect key="frame" x="8" y="56" width="148" height="158"/>
+                        <rect key="frame" x="8" y="56" width="148" height="173"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Kdb-E5-qFd" userLabel="图标">
-                                <rect key="frame" x="8" y="8" width="132" height="80"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Kdb-E5-qFd" userLabel="图标" customClass="RCAnthorImgeView">
+                                <rect key="frame" x="8" y="8" width="138" height="90"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="80" id="Gxz-eN-A2F"/>
+                                    <constraint firstAttribute="height" constant="90" id="Gxz-eN-A2F"/>
                                 </constraints>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="U64-3O-sQq" userLabel="关注">
-                                <rect key="frame" x="44" y="131" width="60" height="23"/>
+                                <rect key="frame" x="47" y="141" width="60" height="23"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="23" id="s2p-tZ-or8"/>
                                     <constraint firstAttribute="width" constant="60" id="xJY-MZ-DtN"/>
@@ -54,7 +54,7 @@
                                 <state key="selected" backgroundImage="find_radio_focuse_sel"/>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="249" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aqF-MD-g1p" userLabel="子标题">
-                                <rect key="frame" x="8" y="97" width="132" height="21"/>
+                                <rect key="frame" x="8" y="107" width="132" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="21" id="vQh-q1-LqI"/>
                                 </constraints>
@@ -67,7 +67,7 @@
                             <constraint firstItem="aqF-MD-g1p" firstAttribute="leading" secondItem="FcT-bY-1AN" secondAttribute="leading" constant="8" id="FF8-jO-Adw"/>
                             <constraint firstAttribute="trailing" secondItem="aqF-MD-g1p" secondAttribute="trailing" constant="8" id="Lfs-Y8-QCl"/>
                             <constraint firstItem="aqF-MD-g1p" firstAttribute="top" secondItem="Kdb-E5-qFd" secondAttribute="bottom" constant="9" id="NQD-2A-G2y"/>
-                            <constraint firstAttribute="trailing" secondItem="Kdb-E5-qFd" secondAttribute="trailing" constant="8" id="OcM-Ga-dHz"/>
+                            <constraint firstAttribute="trailing" secondItem="Kdb-E5-qFd" secondAttribute="trailing" constant="2" id="OcM-Ga-dHz"/>
                             <constraint firstItem="Kdb-E5-qFd" firstAttribute="leading" secondItem="FcT-bY-1AN" secondAttribute="leading" constant="8" id="S7F-IJ-bIG"/>
                             <constraint firstItem="Kdb-E5-qFd" firstAttribute="top" secondItem="FcT-bY-1AN" secondAttribute="top" constant="8" id="XEf-3A-q2i"/>
                             <constraint firstItem="U64-3O-sQq" firstAttribute="top" secondItem="aqF-MD-g1p" secondAttribute="bottom" constant="13" id="iQa-zW-ldX"/>
@@ -75,16 +75,16 @@
                         </constraints>
                     </view>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="o74-Eh-BDb">
-                        <rect key="frame" x="164" y="56" width="148" height="158"/>
+                        <rect key="frame" x="164" y="56" width="148" height="173"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="rbh-bu-8QG" userLabel="图标">
-                                <rect key="frame" x="8" y="8" width="132" height="80"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="rbh-bu-8QG" userLabel="图标" customClass="RCAnthorImgeView">
+                                <rect key="frame" x="2" y="8" width="144" height="90"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="80" id="iGa-Tf-2DU"/>
+                                    <constraint firstAttribute="height" constant="90" id="iGa-Tf-2DU"/>
                                 </constraints>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CTZ-d9-g3P" userLabel="关注">
-                                <rect key="frame" x="44" y="131" width="60" height="23"/>
+                                <rect key="frame" x="44" y="141" width="60" height="23"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="60" id="B52-rO-ynl"/>
                                     <constraint firstAttribute="height" constant="23" id="gAG-o3-bqM"/>
@@ -95,7 +95,7 @@
                                 <state key="selected" backgroundImage="find_radio_focuse_sel"/>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="249" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pTa-z6-PEf" userLabel="子标题">
-                                <rect key="frame" x="8" y="97" width="132" height="21"/>
+                                <rect key="frame" x="8" y="107" width="132" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="21" id="8iL-dm-mdl"/>
                                 </constraints>
@@ -105,27 +105,27 @@
                             </label>
                         </subviews>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="rbh-bu-8QG" secondAttribute="trailing" constant="8" id="00D-4j-Ipl"/>
+                            <constraint firstAttribute="trailing" secondItem="rbh-bu-8QG" secondAttribute="trailing" constant="2" id="00D-4j-Ipl"/>
                             <constraint firstAttribute="trailing" secondItem="pTa-z6-PEf" secondAttribute="trailing" constant="8" id="Fzo-8B-fg4"/>
                             <constraint firstItem="pTa-z6-PEf" firstAttribute="top" secondItem="rbh-bu-8QG" secondAttribute="bottom" constant="9" id="V6U-PS-nwB"/>
                             <constraint firstItem="CTZ-d9-g3P" firstAttribute="centerX" secondItem="rbh-bu-8QG" secondAttribute="centerX" constant="-0.5" id="Z9V-ke-ZJa"/>
                             <constraint firstItem="rbh-bu-8QG" firstAttribute="top" secondItem="o74-Eh-BDb" secondAttribute="top" constant="8" id="d76-4F-WTb"/>
                             <constraint firstItem="CTZ-d9-g3P" firstAttribute="top" secondItem="pTa-z6-PEf" secondAttribute="bottom" constant="13" id="nXC-Od-QYP"/>
                             <constraint firstItem="pTa-z6-PEf" firstAttribute="leading" secondItem="o74-Eh-BDb" secondAttribute="leading" constant="8" id="qVy-zS-ZiF"/>
-                            <constraint firstItem="rbh-bu-8QG" firstAttribute="leading" secondItem="o74-Eh-BDb" secondAttribute="leading" constant="8" id="z9k-5a-Swi"/>
+                            <constraint firstItem="rbh-bu-8QG" firstAttribute="leading" secondItem="o74-Eh-BDb" secondAttribute="leading" constant="2" id="z9k-5a-Swi"/>
                         </constraints>
                     </view>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uFP-41-rhD">
-                        <rect key="frame" x="320" y="56" width="148" height="158"/>
+                        <rect key="frame" x="320" y="56" width="148" height="173"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="cGY-Le-r6e" userLabel="图标">
-                                <rect key="frame" x="8" y="8" width="132" height="80"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="cGY-Le-r6e" userLabel="图标" customClass="RCAnthorImgeView">
+                                <rect key="frame" x="2" y="8" width="138" height="90"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="80" id="oqw-KN-sDn"/>
+                                    <constraint firstAttribute="height" constant="90" id="oqw-KN-sDn"/>
                                 </constraints>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IrO-iL-B0R" userLabel="关注">
-                                <rect key="frame" x="44" y="131" width="60" height="23"/>
+                                <rect key="frame" x="41" y="141" width="60" height="23"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="23" id="4lt-LB-trI"/>
                                     <constraint firstAttribute="width" constant="60" id="uUG-3V-8k2"/>
@@ -136,7 +136,7 @@
                                 <state key="selected" backgroundImage="find_radio_focuse_sel"/>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="249" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kW9-oH-d1M" userLabel="子标题">
-                                <rect key="frame" x="8" y="97" width="132" height="21"/>
+                                <rect key="frame" x="8" y="107" width="132" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="21" id="L8x-bE-i6t"/>
                                 </constraints>
@@ -152,7 +152,7 @@
                             <constraint firstItem="kW9-oH-d1M" firstAttribute="leading" secondItem="uFP-41-rhD" secondAttribute="leading" constant="8" id="KJJ-nN-NCa"/>
                             <constraint firstItem="IrO-iL-B0R" firstAttribute="centerX" secondItem="cGY-Le-r6e" secondAttribute="centerX" constant="-0.5" id="Mhd-0G-3T6"/>
                             <constraint firstItem="IrO-iL-B0R" firstAttribute="top" secondItem="kW9-oH-d1M" secondAttribute="bottom" constant="13" id="QOe-Hi-KRa"/>
-                            <constraint firstItem="cGY-Le-r6e" firstAttribute="leading" secondItem="uFP-41-rhD" secondAttribute="leading" constant="8" id="ZbE-ab-OeI"/>
+                            <constraint firstItem="cGY-Le-r6e" firstAttribute="leading" secondItem="uFP-41-rhD" secondAttribute="leading" constant="2" id="ZbE-ab-OeI"/>
                             <constraint firstAttribute="trailing" secondItem="kW9-oH-d1M" secondAttribute="trailing" constant="8" id="nai-m5-9W3"/>
                         </constraints>
                     </view>
@@ -200,7 +200,7 @@
                 <outlet property="title3Label" destination="kW9-oH-d1M" id="rSZ-3c-WC9"/>
                 <outlet property="titleButton" destination="C7s-jI-kYQ" id="0ca-mb-so5"/>
             </connections>
-            <point key="canvasLocation" x="679.5" y="371.5"/>
+            <point key="canvasLocation" x="679.5" y="379"/>
         </tableViewCell>
     </objects>
     <resources>
