--- a/喜马拉雅/classes/discover(发现)/view/circle(圈子)/cicle/RCRecommendPostViewCell.xib
+++ b/喜马拉雅/classes/discover(发现)/view/circle(圈子)/cicle/RCRecommendPostViewCell.xib
@@ -7,22 +7,22 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="postCell" rowHeight="318" id="KGk-i7-Jjw" customClass="RCRecommendPostViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="318"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="postCell" rowHeight="327" id="KGk-i7-Jjw" customClass="RCRecommendPostViewCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="327"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="F2p-L1-MWH">
-                        <rect key="frame" x="8" y="8" width="30" height="30"/>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="findCategory_default" translatesAutoresizingMaskIntoConstraints="NO" id="F2p-L1-MWH">
+                        <rect key="frame" x="8" y="12" width="30" height="30"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="30" id="h5E-mS-q6K"/>
                             <constraint firstAttribute="height" constant="30" id="w6n-PT-7VD"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="用户名" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="57A-Je-Lcr">
-                        <rect key="frame" x="46" y="8" width="164" height="21"/>
+                        <rect key="frame" x="46" y="12" width="164" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="LMT-fP-Pz8"/>
                             <constraint firstAttribute="width" constant="164" id="eUN-yj-Fi4"/>
@@ -32,13 +32,13 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="正文" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EPt-Th-lGp">
-                        <rect key="frame" x="23" y="77" width="289" height="16"/>
+                        <rect key="frame" x="23" y="81" width="289" height="16"/>
                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                         <color key="textColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="标题" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WNK-HB-B7a">
-                        <rect key="frame" x="8" y="48" width="304" height="18"/>
+                        <rect key="frame" x="8" y="52" width="304" height="18"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="18" id="am8-W9-SUy"/>
                         </constraints>
@@ -47,7 +47,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="时间" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9NK-bB-GQm">
-                        <rect key="frame" x="256" y="8" width="56" height="21"/>
+                        <rect key="frame" x="256" y="12" width="56" height="21"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="56" id="bP9-Gn-wlE"/>
                             <constraint firstAttribute="height" constant="21" id="gl4-Y9-zMn"/>
@@ -57,22 +57,22 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Oru-88-pb0">
-                        <rect key="frame" x="110" y="103" width="99" height="110"/>
+                        <rect key="frame" x="110" y="107" width="99" height="110"/>
                     </imageView>
                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="C0Y-7z-JVD">
-                        <rect key="frame" x="212" y="103" width="100" height="110"/>
+                        <rect key="frame" x="212" y="107" width="100" height="110"/>
                     </imageView>
                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="FTg-4U-vdm">
-                        <rect key="frame" x="8" y="103" width="100" height="110"/>
+                        <rect key="frame" x="8" y="107" width="100" height="110"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="110" id="fCf-gN-EjT"/>
                         </constraints>
                     </imageView>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fXz-KA-1Kj">
-                        <rect key="frame" x="8" y="223" width="312" height="78"/>
+                        <rect key="frame" x="8" y="227" width="312" height="83"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="749" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fDF-NS-Gct">
-                                <rect key="frame" x="256" y="29" width="56" height="21"/>
+                                <rect key="frame" x="256" y="31" width="56" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="56" id="me7-1A-ONr"/>
                                 </constraints>
@@ -83,21 +83,27 @@
                                 </state>
                             </button>
                         </subviews>
-                        <color key="backgroundColor" red="0.35250320979999999" green="1" blue="0.3185852273" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstAttribute="centerY" secondItem="fDF-NS-Gct" secondAttribute="centerY" id="Uc5-QF-5rj"/>
                             <constraint firstAttribute="trailing" secondItem="fDF-NS-Gct" secondAttribute="trailing" id="g6H-GF-dsA"/>
                         </constraints>
                     </view>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="a4A-bw-07H">
+                        <rect key="frame" x="-8" y="0.0" width="336" height="8"/>
+                        <color key="backgroundColor" red="0.87450980389999999" green="0.87450980389999999" blue="0.87450980389999999" alpha="0.57999999999999996" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="8" id="m6D-ce-tZe"/>
+                        </constraints>
+                    </view>
                 </subviews>
                 <constraints>
                     <constraint firstItem="9NK-bB-GQm" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="2Cb-ra-jDf"/>
-                    <constraint firstItem="9NK-bB-GQm" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="6jI-bo-0sn"/>
+                    <constraint firstItem="9NK-bB-GQm" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="4" id="6jI-bo-0sn"/>
                     <constraint firstItem="C0Y-7z-JVD" firstAttribute="width" secondItem="Oru-88-pb0" secondAttribute="width" id="7wL-ZT-vzz"/>
-                    <constraint firstItem="F2p-L1-MWH" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="DIJ-Zz-CuW"/>
+                    <constraint firstItem="F2p-L1-MWH" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="4" id="DIJ-Zz-CuW"/>
                     <constraint firstItem="57A-Je-Lcr" firstAttribute="leading" secondItem="F2p-L1-MWH" secondAttribute="trailing" constant="8" id="FOx-8n-Hvn"/>
                     <constraint firstItem="FTg-4U-vdm" firstAttribute="height" secondItem="Oru-88-pb0" secondAttribute="height" id="IK9-D9-Czy"/>
-                    <constraint firstItem="57A-Je-Lcr" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="K7y-E3-6UD"/>
+                    <constraint firstItem="57A-Je-Lcr" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="4" id="K7y-E3-6UD"/>
                     <constraint firstItem="WNK-HB-B7a" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="KKx-Jc-Pbg"/>
                     <constraint firstItem="FTg-4U-vdm" firstAttribute="top" secondItem="Oru-88-pb0" secondAttribute="top" id="Kz1-3Z-M3d"/>
                     <constraint firstItem="FTg-4U-vdm" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="Mgm-1y-7uH"/>
@@ -112,8 +118,11 @@
                     <constraint firstItem="C0Y-7z-JVD" firstAttribute="height" secondItem="Oru-88-pb0" secondAttribute="height" id="avI-mB-VNA"/>
                     <constraint firstItem="FTg-4U-vdm" firstAttribute="top" secondItem="EPt-Th-lGp" secondAttribute="bottom" constant="10" id="c4Y-Fc-gLJ"/>
                     <constraint firstItem="Oru-88-pb0" firstAttribute="leading" secondItem="FTg-4U-vdm" secondAttribute="trailing" constant="2" id="cTD-QW-eOy"/>
+                    <constraint firstItem="a4A-bw-07H" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="-8" id="d3y-E4-PiJ"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="a4A-bw-07H" secondAttribute="trailing" constant="-16" id="ezO-Me-nOY"/>
                     <constraint firstItem="C0Y-7z-JVD" firstAttribute="leading" secondItem="Oru-88-pb0" secondAttribute="trailing" constant="3" id="fbI-pp-n6l"/>
                     <constraint firstItem="WNK-HB-B7a" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="imW-29-e55"/>
+                    <constraint firstItem="a4A-bw-07H" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="-16" id="mEt-Y0-LDM"/>
                     <constraint firstItem="EPt-Th-lGp" firstAttribute="top" secondItem="WNK-HB-B7a" secondAttribute="bottom" constant="11" id="n1t-3X-9wl"/>
                     <constraint firstItem="C0Y-7z-JVD" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="nw9-ke-dgi"/>
                     <constraint firstItem="fXz-KA-1Kj" firstAttribute="top" secondItem="FTg-4U-vdm" secondAttribute="bottom" constant="10" id="u2w-im-Q8l"/>
@@ -134,10 +143,11 @@
                 <outlet property="titleLabel" destination="WNK-HB-B7a" id="dQk-KL-kXf"/>
                 <outlet property="userNameLabel" destination="57A-Je-Lcr" id="JPZ-vl-gkG"/>
             </connections>
-            <point key="canvasLocation" x="573" y="497"/>
+            <point key="canvasLocation" x="573" y="501.5"/>
         </tableViewCell>
     </objects>
     <resources>
+        <image name="findCategory_default" width="60" height="70"/>
         <image name="zone_post_red" width="21" height="21"/>
     </resources>
 </document>
