--- a/喜马拉雅/classes/discover(发现)/view/circle(圈子)/cicleDeail/RCCicleDeailHeaderView.xib
+++ b/喜马拉雅/classes/discover(发现)/view/circle(圈子)/cicleDeail/RCCicleDeailHeaderView.xib
@@ -6,13 +6,91 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="48g-HZ-jUx" customClass="RCCicleDeailHeaderView">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="200"/>
+        <view contentMode="scaleToFill" id="RbS-fd-rRz" customClass="RCCicleDeailHeaderView">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="76"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <color key="backgroundColor" red="1" green="0.050641252069999997" blue="0.06118019282" alpha="1" colorSpace="calibratedRGB"/>
+            <subviews>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg_sr" translatesAutoresizingMaskIntoConstraints="NO" id="kVL-wW-Oou">
+                    <rect key="frame" x="0.0" y="0.0" width="320" height="76"/>
+                </imageView>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ex9-Eu-yBY">
+                    <rect key="frame" x="12" y="9" width="60" height="60"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="60" id="EJ0-iG-eVr"/>
+                        <constraint firstAttribute="width" constant="60" id="Iyo-aZ-sRe"/>
+                    </constraints>
+                </imageView>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Qj-JM-GI7">
+                    <rect key="frame" x="78" y="3" width="201" height="21"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="21" id="eZV-UF-zMx"/>
+                        <constraint firstAttribute="width" constant="201" id="faq-rn-IgX"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Srn-Hk-NQ4">
+                    <rect key="frame" x="78" y="51" width="176" height="21"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="176" id="bcL-SK-9O0"/>
+                        <constraint firstAttribute="height" constant="21" id="uiw-dn-DB5"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                    <color key="textColor" red="1" green="0.46942787120000001" blue="0.13712519940000001" alpha="1" colorSpace="calibratedRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NDq-l6-bYF">
+                    <rect key="frame" x="78" y="28" width="176" height="21"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="21" id="axh-YO-ewS"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KHe-g0-fP5">
+                    <rect key="frame" x="254" y="26" width="54" height="25"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="54" id="29R-NM-cbh"/>
+                        <constraint firstAttribute="height" constant="25" id="AMx-6C-hzA"/>
+                    </constraints>
+                    <state key="normal" backgroundImage="zone_join_n">
+                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
+                </button>
+            </subviews>
+            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+            <constraints>
+                <constraint firstAttribute="trailing" secondItem="KHe-g0-fP5" secondAttribute="trailing" constant="12" id="5jP-CS-Lda"/>
+                <constraint firstAttribute="bottom" secondItem="kVL-wW-Oou" secondAttribute="bottom" id="9TQ-fT-5Zl"/>
+                <constraint firstItem="Srn-Hk-NQ4" firstAttribute="top" secondItem="NDq-l6-bYF" secondAttribute="bottom" constant="2" id="Dfr-hO-f4L"/>
+                <constraint firstItem="6Qj-JM-GI7" firstAttribute="leading" secondItem="NDq-l6-bYF" secondAttribute="leading" id="FAZ-sR-7aB"/>
+                <constraint firstItem="ex9-Eu-yBY" firstAttribute="top" secondItem="RbS-fd-rRz" secondAttribute="top" constant="9" id="Ge1-oT-8cg"/>
+                <constraint firstItem="NDq-l6-bYF" firstAttribute="centerY" secondItem="KHe-g0-fP5" secondAttribute="centerY" id="JIC-a4-6aK"/>
+                <constraint firstItem="6Qj-JM-GI7" firstAttribute="leading" secondItem="Srn-Hk-NQ4" secondAttribute="leading" id="Oak-tj-0BA"/>
+                <constraint firstAttribute="trailing" secondItem="kVL-wW-Oou" secondAttribute="trailing" id="OnC-ef-XeI"/>
+                <constraint firstItem="6Qj-JM-GI7" firstAttribute="top" secondItem="RbS-fd-rRz" secondAttribute="top" constant="3" id="VJW-VF-soO"/>
+                <constraint firstItem="NDq-l6-bYF" firstAttribute="trailing" secondItem="Srn-Hk-NQ4" secondAttribute="trailing" id="Vds-gQ-JkJ"/>
+                <constraint firstItem="KHe-g0-fP5" firstAttribute="top" secondItem="6Qj-JM-GI7" secondAttribute="bottom" constant="2" id="hMN-yl-G5m"/>
+                <constraint firstItem="kVL-wW-Oou" firstAttribute="top" secondItem="RbS-fd-rRz" secondAttribute="top" id="hbV-aJ-Fga"/>
+                <constraint firstItem="kVL-wW-Oou" firstAttribute="leading" secondItem="RbS-fd-rRz" secondAttribute="leading" id="i3J-xK-1Qe"/>
+                <constraint firstItem="ex9-Eu-yBY" firstAttribute="leading" secondItem="RbS-fd-rRz" secondAttribute="leading" constant="12" id="lKP-qT-l7b"/>
+                <constraint firstItem="6Qj-JM-GI7" firstAttribute="leading" secondItem="ex9-Eu-yBY" secondAttribute="trailing" constant="6" id="zI6-Hd-yQW"/>
+            </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="1238" y="-3"/>
+            <connections>
+                <outlet property="iconView" destination="ex9-Eu-yBY" id="RPZ-G6-fb3"/>
+                <outlet property="subTitlelabel" destination="NDq-l6-bYF" id="mKr-0q-F1G"/>
+                <outlet property="titleLabel" destination="6Qj-JM-GI7" id="cTt-lc-iXS"/>
+                <outlet property="zoneCountLabel" destination="Srn-Hk-NQ4" id="2qh-xX-k5K"/>
+            </connections>
+            <point key="canvasLocation" x="523" y="440"/>
         </view>
     </objects>
+    <resources>
+        <image name="bg_sr" width="320" height="568"/>
+        <image name="zone_join_n" width="64" height="24"/>
+    </resources>
 </document>
